--- a/res/menu/timeline.xml
+++ b/res/menu/timeline.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+	
+	<item
+        android:id="@+id/menuRefresh"
+        android:icon="@drawable/ic_refresh"
+        android:showAsAction="ifRoom"
+        android:onClick="onRefreshView"
+        android:title="Refresh">
+    </item>
     <item
         android:id="@+id/menuCompose"
         android:icon="@drawable/ic_compose"
@@ -8,11 +15,11 @@
         android:title="Compose">
     </item>
     <item
-        android:id="@+id/menuCompose"
-        android:icon="@drawable/ic_profile"
-        android:showAsAction="ifRoom|withText"
-        android:onClick="onProfileView"
-        android:title="Profile">
+        android:id="@+id/menuTrends"
+        android:icon="@drawable/ic_trends"
+        android:showAsAction="ifRoom"
+        android:onClick="onTrendsView"
+        android:title="Trends">
     </item>
 
 </menu>
